2004-08-03  Marc Kleine-Budde <kleine-budde@gmx.de>

	* nucleus/pod.c (xnpod_trap_fault): Ensure that faults over IRQs
	and threads are properly relayed to the user-defined fault
	handler.

2004-08-03  Philippe Gerum  <rpm@xenomai.org>

	* arch/i386/patches: Upgrade to Adeos 2.6.7-i386-r6c6. This is
	needed to have the APIC timing in uniprocessor mode properly
	working.

2004-08-02  Philippe Gerum  <rpm@xenomai.org>

	* arch/i386/hal/hal.c: Refactor the timer support.  As a result of
	the changes: 1) the code automatically adapts to the timer used by
	the kernel configuration, and only for this one
	(CONFIG_X86_LOCAL_APIC or not); 2) the UP+LAPIC configuration now
	works properly; 3) the timer-related API exposed is much more
	consistent.

	* arch/i386/patches: Upgrade to Adeos 2.6.7-i386-r6c5.

2004-08-02  Philippe Gerum  <rpm@xenomai.org>

	* include/nucleus/asm-i386/system.h (XNARCH_CALIBRATION_PERIOD):
	Set to 100 us.

	* arch/i386/hal/hal.c (rthal_trap_fault): Remove obsolete code
	trapping exception #7 over the RTAI domain.

	* nucleus/timer.c (xntimer_next_shot): Rewrite so that the
	calibrated latencies are properly used.

	* nucleus/pod.c (xnpod_resume_thread): Single exit branch.

2004-08-01  Philippe Gerum  <rpm@xenomai.org>

	* include/nucleus/types.h: Define signed types for tick and
	nanosecond values.

	* skins/rtai/timer.c (rt_timer_ticks2ns, rt_timer_ns2ticks):
	Operate on signed input/output values.

2004-07-31  Philippe Gerum  <rpm@xenomai.org>

	* nucleus/pod.c (xnpod_preempt_current_thread): Remove superfluous
	locking; it must be in effect when entering the routine in any
	case.

2004-07-27  Philippe Gerum  <rpm@xenomai.org>

	* nucleus/shadow.c (xnshadow_sync_wait): Use the right type for
	storing a spl value.

2004-07-26  Philippe Gerum  <rpm@xenomai.org>

	* nucleus/dbridge.c: Use SMP locking.

2004-07-25  Philippe Gerum  <rpm@xenomai.org>

 	* RELEASE: fusion-0.3

2004-07-25  Philippe Gerum  <rpm@xenomai.org>
